src/app/components/TagMenuContent/styles.css
.NLT__tag-menu-top {
	display: flex;
	background-color: rgba(0, 0, 0, 0.25);
	padding: 4px 10px;
}

.NLT__tag-menu-bottom {
	min-height: 100px;
	padding: 4px 10px;
}

.NLT__tag-menu-text {
	font-size: 0.85rem;
	margin: 5px 0px;
	width: 100%;
}

.NLT__tag-menu-input {
	background-color: transparent !important;
	border: 0 !important;
	width: 100%;
	min-width: 100px;
}

